第一遍完成

--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -512,9 +512,458 @@
 |physically|
 |scarcely|
 |virtually|
-|
-|
-|
-|
-|
-|
+|**chapter 5.1**|
+|a balanced diet|
+|a couple of|
+|A plus|
+|a series of|
+|a sharp turn|
+|accommondation expense|
+|accommondation fee|
+|accommondation form|
+|accountants|
+|added panic|
+|agraian reform|
+|aim of lecture|
+|aims|
+|air shuttle bus|
+|alternative energies|
+|annual membership fee|
+|ant intelligence|
+|antibiotics and acid|
+|appearances|
+|architecture style|
+|Arctic Ocean|
+|Atlantic Ocean|
+|arm badge|
+|art gallery|
+|articles from journal|
+|artistic approach|
+|associate with|
+|assume the responsibilitiy|
+|area of improvement|
+|awards|
+|atmospheric pollution|
+|average ability|
+|bricks|
+|bowls|
+|Bachelor's degree|
+|bad eyesight|
+|Baked Earth|
+|barbecue set|
+|barren land|
+|barren mine|
+|bed linen|
+|be prone to|
+|black raincoat|
+|black velvet|
+|blue sweater|
+|boarding school|
+|book reservation|
+|bones|
+|bowling alley|
+|botanical garden|
+|**chapter 5.2**|
+|bulletin board|
+|breathtaking|
+|breed fish|
+|borden one's horizon|
+|borden one's view|
+|business ethics|
+|business faculty|
+|cages|
+|cabin keys|
+|circulation desk|
+|call slip|
+|campus crime|
+|car tyres|
+|comment card|
+|carbon dioxide|
+|carve|
+|carving wood|
+|cassette recorders|
+|casual clothes|
+|casual wear|
+|cater to|
+|catering facilities|
+|catering staff|
+|center heating|
+|Center Avenue|
+|certificate of childcare|
+|charitable organization|
+|charity hospital|
+|concentrate on|
+|circus performance|
+|commuters|
+|class representative|
+|conquerors|
+|cleaning equipment|
+|coarse texture|
+|colleagues|
+|closed shelves|
+|closed reserve|
+|closed-circuit TV|
+|college close-up|
+|reference reports|
+|contact list|
+|complusory course|
+|connecting flight|
+|**chapter 5.3**|
+|contact lenses|
+|cooperating research elements|
+|coping with stress|
+|corporate loan|
+|cost effective|
+|costume party|
+|cough mixture|
+|course fee|
+|course and materials|
+|course director|
+|craft goods|
+|creeks|
+|crime awareness|
+|crime rate|
+|curve chart|
+|cycling route|
+|customs service|
+|cut and polished|
+|dark clothes|
+|dateline|
+|date slip|
+|debts|
+|decayed teeth|
+|decoration ballons|
+|distinguishing feature|
+|domestic factors|
+|domestic violence|
+|double grill|
+|Drama Festival|
+|dress rehearsal|
+|disputes|
+|EI Nino|
+|economic growth|
+|economic class|
+|education exhibition|
+|electronic director|
+|electric fan|
+|dial|
+|**chapter 5.4**|
+|endangered species|
+|energy industry|
+|engrave|
+|exercise one's muscles|
+|exhibition of instruments|
+|experimental for construction|
+|expected duration|
+|ethical film|
+|extinct species|
+|fancy dress|
+|falcons|
+|fear of unemployment|
+|feel one's pulse|
+|female corpse study|
+|field method|
+|field system|
+|field trip|
+|financial exclutive|
+|financial organization|
+|fire drill|
+|fish tank|
+|fixed expenses|
+|food chain|
+|forestry industry|
+|**chapter 5.5**|
+|free for heating|
+|fruit juice|
+|fruit trees|
+|fur trade|
+|Garden Hall|
+|garden tools|
+|general election|
+|geography trip|
+|geographic location|
+|geographical value|
+|give a presciption|
+|guide book|
+|guided tour|
+|go to hospital|
+|gold medal|
+|good steering|
+|grasp keywords|
+|graduation announcements|
+|grain pattern of timber|
+|grain pattern|
+|greyhound bus|
+|hens|
+|half human|
+|hard-hoofed animals|
+|hall of residence|
+|halls of residence|
+|hands broken|
+|have strong hearts and lungs|
+|have high rank in geography|
+|have strong financial muscles|
+|heat indicator|
+|horse hair|
+|herb tea|
+|herd of cattle|
+|host family|
+|high rank|
+|high-rise buildings|
+|honeymoon suite|
+|horror film|
+|**chapter 5.6**|
+|hunt for|
+|human consumption|
+|ice curling|
+|illegal profits|
+|incoming call|
+|Independence Day|
+|industrial material|
+|injection of vaccine|
+|insects haunting|
+|intensive course|
+|interlibrary service|
+|investigators|
+|irrigable land|
+|isolated spot|
+|jump the queue|
+|killer whales|
+|Kungfu film|
+|kelp forest|
+|key to reception|
+|King's suite|
+|knives/knife|
+|kitchen utensils|
+|large-scale housing|
+|laser printing|
+|lawyers|
+|learning strategies|
+|leisure ware|
+|level of maturity|
+|letter of recommendation|
+|life cycle|
+|life expectancy|
+|**chapter 5.7**|
+|local tribes|
+|lookout points|
+|loss of soil|
+|low nutrition|
+|low-frequency noise|
+|magazines and journals|
+|martial arts|
+|manmade dam|
+|manual facilities|
+|market cycle|
+|marketing techniques|
+|mass media|
+|meat and cheese|
+|mathmatic formula|
+|mature students|
+|microwave oven|
+|mid-autumn festival|
+|mid-semester|
+|migration patterns|
+|mileage ticket|
+|mill the grain on the ground|
+|mineral water|
+|mining industry|
+|monopoly of education|
+|name badge|
+|natural fiber|
+|no allergy|
+|non-medicine item|
+|not for circulation|
+|number of occupants|
+|Nursing Deploma|
+|occupational factors|
+|obligatory course|
+|self-sufficient|
+|office assistant|
+|overfill|
+|olive oil|
+|OHPEN|
+|**chapter 5.8**|
+|on sale|
+|on small scale|
+|open shelves|
+|optional course|
+|ordinary farmers|
+|organic fiber|
+|Oriental studies|
+|out circulation|
+|overall aim of the health club|
+|overdue and pay a fine|
+|hitchhike|
+|paddling pool|
+|pal group relationship|
+|palaces|
+|palm tree|
+|parent's meeting's aim|
+|parental teaching|
+|party wears|
+|personal trainer|
+|philosopher|
+|photocopies of notes|
+|photocopies of articles|
+|photocopy of article|
+|photocopy office|
+|physical therapy|
+|pink slip|
+|plastic collection|
+|pocket money|
+|polish cars|
+|poor area|
+|pop test|
+|population growth|
+|population of crocodiles|
+|postal servey|
+|precautions|
+|presentation skills|
+|President's suite|
+|public awareness|
+|quality of personnel|
+|quarry tiles|
+|question handling|
+|Queen's suite|
+|railway rail|
+|**chapter 5.9**|
+|raw material|
+|reading session|
+|recall library books|
+|receive prize|
+|recreation therapy|
+|recruiting method|
+|red kangaroo|
+|refresher course|
+|registered mail|
+|reinforced by wood and steel|
+|research opportunities|
+|resistence from parents|
+|repect the local environment|
+|result from|
+|review of literature|
+|review promptly|
+|rice cultivation|
+|Riverside Restaurant|
+|Rose Lane|
+|rock salt|
+|romance story|
+|Rose Garden|
+|row house|
+|route map|
+|royal commission|
+|rubber blanket|
+|rubber tree|
+|rules and regulations|
+|run risks|
+|running tunnel|
+|role of staff|
+|Silent Island|
+|sandglass clock|
+|School of Arts and Sciences|
+|scientific approach|
+|scores|
+|sea otter|
+|sea urchin|
+|seat belt|
+|seating capacity|
+|sedentary lifestyle|
+|sensible exercise|
+|shear the sheep|
+|sheep and cattle|
+|sheep shearing|
+|shop assistant|
+|sick note|
+|side effects|
+|safari zoo|
+|safari park|
+|similar experiments|
+|single item|
+|**chapter 5.10**|
+|sky dome|
+|slide presentation|
+|small scale|
+|small scar on his chin|
+|social isolation|
+|sore throat|
+|special audio equipment|
+|special offers|
+|specialist engine design|
+|specialized course|
+|specialized meseum|
+|specialized sports facilities|
+|species of crocodiles|
+|spiral notebook|
+|spinose plants|
+|standard suite|
+|steak set|
+|steel and wood|
+|stiff neck|
+|still water|
+|stones|
+|strong scent|
+|student hostel|
+|student representative|
+|study technique|
+|stuffed nose|
+|stuffed toys|
+|stuff of purse|
+|subject access guide|
+|sufficient details|
+|supportive atmosphere|
+|suntan block|
+|sun cream|
+|survival courses|
+|swimming costume|
+|take one's temperature|
+|technical vocabulary|
+|teaching syllabus|
+|teachers and faculty|
+|tape recorder|
+|terraced house|
+|terrestrial heat|
+|tertiary education|
+|the poor
+|the Milky Way
+|**chapter 5.11**|
+|theoretical framework|
+|tiger shark|
+|theory chapters|
+|theory of application|
+|therapy method|
+|tilled land|
+|thinking pattern|
+|to some extend|
+|toilet facility|
+|tourist brochures|
+|traveller's check|
+|Trinity College|
+|tropical diseases|
+|tuition fee|
+|tutorial system|
+|urban area|
+|vacuum cleaner|
+|vacuum the stairs|
+|visual aids|
+|violent crime|
+|volcanic dust|
+|volume chart|
+|weight training|
+|wedding photos|
+|waste handling|
+|waste deposal|
+|weaving blanket|
+|water skiing|
+|widen one's horizon|
+|wind power|
+|wind tunnels|
+|window dressing|
+|wing design|
+|woman author|
+|wood should be cut and seasoned|
+|work objective|
+|World Expo|
+|wretched boat|
+|youth hostel|
+|your own embassy|
