--- a/IELTS/语料库听写/第一遍/听写记录.md
+++ b/IELTS/语料库听写/第一遍/听写记录.md
@@ -1,9 +1,9 @@
 ## chapter 3
 #### test paper 1
-ability abstract account acurricy ascid action activity actor adult adeventure advertisment advertising advise age agency agreement agricutule aid aim air allergy ally allowence operation oppitu  ambition ambilence amounce analis analisit anger animal ancle answer aa aa apearence aa aa area argument  aa army art artical aa asignment actress audience aa auther authritory average avoid ba- background bacteria bach badmintain backpack boo band bandage ban bank bankuit base basement basis basis bath baterry baterry beach bid beaf beaty bed bedroom bedsheet bedsit behaviour belt benifit beverage bb bike bill biologist bird birth blanket blast block blouse bord border boat born ball balling branch breakfirst break breach bb building bb birger birgerler bath cab
+ability abstract account acurricy ascid action activity actor adult adeventure advertisment advertising advise age agency agreement agricutule aid aim air allergy ally allowence operation oppitu  ambition ambilence amounce analis analisit anger animal ancle answer aa aa apearence aa aa area argument  aa army art article aa asignment actress audience aa auther authritory average avoid ba- background bacteria bach badmintain backpack boo band bandage ban bank bankuit base basement basis basis bath baterry baterry beach bid beaf beaty bed bedroom bedsheet bedsit behaviour belt benifit beverage bb bike bill biologist bird birth blanket blast block blouse bord border boat born ball balling branch breakfirst break breach bb building bb birger birgerler bath cab
 
 #### test paper 2
-cabinat cable cafe cafitera cage camebridge camel camera camp campus candidate candle cantine capital capital carben care carrer carbit carving casher cc cantigory cacidro course cave sence centory certificate chair chance chancler chanlle chapter caractor charge charity chart chat checklist checks cheese che chest chick chicken child chain chocolate choice church cinema circul city clarity cleaner cleaning client clist climate clinic clock close closing club coach coast cold coke cc cullege college comidy commercial cumputer companin company complaint complex computer concert conclusion condition confierence confident confirmation conguestion conqura conquest conversation conservation construction consultent consumtion contact container conmaninace contamation content contenant contract contract contravercy convience cooperation cop copy cooperation cops coresponcdent cost costuim cot cottage cofe conceil contory cost crack crost cream credit creak crime chrisis cc cc cultivation culture cup cupboard curtain customer cc circle circling damage danger data date day deadline debate 
+cabinat cable cafe cafitera cage camebridge camel camera camp campus candidate candle cantine capital capital carben care carrer carbit carving casher cc cantigory cacidro course cave sense centory certificate chair chance chancler chanlle chapter caractor charge charity chart chat checklist checks cheese che chest chick chicken child chain chocolate choice church cinema circul city clarity cleaner cleaning client clist climate clinic clock close closing club coach coast cold coke cc cullege college comidy commercial cumputer companin company complaint complex computer concert conclusion condition confierence confident confirmation conguestion conqura conquest conversation conservation construction consultent consumtion contact container conmaninace contamation content contenant contract contract contravercy convience cooperation cop copy cooperation cops coresponcdent cost costuim cot cottage cofe council contory cost crack crost cream credit creak crime chrisis cc cc cultivation culture cup cupboard curtain customer cc circle circling damage danger data date day deadline debate 
 
 #### test paper 3
 det decade decition decline decaration delay delegate delite delivery demonstration dentist department deposit deps describtion desert design designer desier desks destination detail diary dictation diet dd dinner diocside direction director disagreement disaster discipline disco discomfort disgose discount discovery di dish dispo disbute distence divoce document documentary  donation donkey draft drammer dros droe drink drinking driver driving drug drum  dd  dd dust duty ea- ear east eating economy editor education elba elder electricity element elevator emotion empera employee employer en- ending energy enging engineer entrance ecdemic equipment esi- evening event evidence examination example exception exchange exitement ex- excuse exisis exibation existance existing exb- expence experiment expert explonation explorion expersition exporser extension facility factor factory 
@@ -12,16 +12,16 @@ det decade decition decline decaration delay delegate delite delivery demonstrat
 faculty failer falcon fan fair farm farmer farming fation fat feat fever feacher feekback fellowship female ferries festoval failed figure film finding fingure firm fish fishing flag flash flat flight flood flooding flower flowrish flow flew fly forist - form formular fortnight fortune ff- freedom freezer freshman foot fir firniture future galary gap garrage garbage garden gathlin gender germ gesture glass goal gold golf grade grase graduate graduates green grase green ground group grose guest guide gulf guy gym habbit hand handball handbooks handlling hangout has hedache heading health hearing heart heating hen her hero heros heroin hike hiking hint hints history hit hits hobby holiday horse hospital h- hero household hour 
 
 #### test paper 5
-hotel hotline hunt hunting idea identification identity image impact import imbility incoming index industry infection influence information injection injurey inland infect in- institute institution instruction instructor instrument interest internet interviewer introduction investigater investment irrigation island isolution item jacket jam jore jeanse jur- judge juice juction junia kaper kalp keyword kid king kilsk kit kitchen kits knife knoledge ko- lab lake lamb land landmark landscape language laptop lasor lover lowyer layer lecture lectural leisure lemon lender links letson letter level library list light line line lists loan location lock lost lunch loity luck lunch lung machine magazine made male majority making mail manager main manufacture map margin mark market marketing marsh master math matching metarial meturity maximum meal measure measurement meat media medication medicine mediem method microphone miggration mile m- milk mine minaral mill minimum minute mixture model money monop- month mood m- mosquitol motel mountain
+hotel hotline hunt hunting idea identification identity image impact import imbility incoming index industry infection influence information injection injurey inland infect in- institute institution instruction instructor instrument interest internet interviewer introduction investigater investment irrigation island isolution item jacket jam jore jeanse jur- judge juice juction junia kaper kalp keyword kid king kilsk kit kitchen kits knife knoledge ko- lab lake lamb land landmark landscape language laptop lasor lover lowyer layer lecture lectural leisure lemon lender links letson letter level library list light line line lists loan location lock lost lunch loity luck lunch lung machine magazine made male majority making mail manager main manufacture map margin mark market marketing marsh master math matching material meturity maximum meal measure measurement meat media medication medicine mediem method microphone miggration mile m- milk mine minaral mill minimum minute mixture model money monop- month mood m- mosquitol motel mountain
 
 #### test paper 6
-mostush mouse movie musle musium music musical musician nap nature nod neck net newspaper night noise north northeast northwest nose note notice nurse nursiry nursing not nutration objective ocasion ocupent ocean occulist - ocean order ordenary organize original outline overdraft owner ownership o- package movie musle musiem pale palace panic paper parsol parent park parking participant passages passenger passtime patient pament pa- pention pentionous percent performer per- period periodical perk permmit person personality pet petrol petrollion phelosiphor photo photograph phisithion phisics pinist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate pla- playground pleasure pocket point please pole polluted pollute pollution - position post postgraduate poticular
+mostush mouse movie musle museum music musical musician nap nature nod neck net newspaper night noise north northeast northwest nose note notice nurse nursiry nursing not nutration objective ocasion ocupent ocean occulist - ocean order ordenary organize original outline overdraft owner ownership o- package movie musle museum pale palace panic paper parsol parent park parking participant passages passenger passtime patient pament pa- pention pentionous percent performer per- period periodical perk permmit person personality pet petrol petrollion phelosiphor photo photograph phisithion phisics pinist piano picnic picture pie pill pink place placement plan planners plans plant planting plastic plate pla- playground pleasure pocket point please pole polluted pollute pollution - position post postgraduate poticular
 
 #### test paper 7
 potories power powerpoint p position preference preparsion pre- presation presavation president prevention printing priority privocy price problem product production preferssor profit project promotion p- propurty propectise protine s- sychologist - population pump purpers purse quality - quater question radia radiator radio railway rain rainful range rank rat rate rats ray reader reading reason reception re- recorder recording recreation recrut recircling refer referrence reflectent reform refuge region regulation relation relationship relaxiation release relign remark removal renewal rent rental repitition replacement report reproduce research reservation reserve residence resident resource respondent response restuat result retirement return review revision rice rider riders risk river robot rock rocket roll 
 
 #### test paper 8
-roommate root rule s- safety sail sailing salad salads salary sail soup sumple s- satelite source saving scale sc- sc- sc- send scedual skim sk- skullarship science scientist score script scupture see/sea season seat second secreroty section sector selection selections seminar sence sentence servent service s- s- sex shade ship shit shelf shell shellter ship shoe shoplistise shopper shortage shower sight sights sign signature silence similation single site size skating sk- skill skin skirt slang slave sleep sleeping slip smell smoke smoking snak soil solution sound source south southeast southwest space speaker speaking speed spending spider sponser spoon sportsman sport stability stack stage stare standad star starter starting state statement station status state steam step s- stock stomache stomacheache stone stor story stratagy st- strike style subject submit sub- suberb suger - sunshild superviser support surface surgent sirname surprise survey survivle sweater switch switches - - s- system table tablet tape tacks 
+roommate root rule s- safety sail sailing salad salads salary sail soup sumple s- satelite source saving scale sc- sc- sc- send scedual skim sk- skullarship science scientist score script scupture see/sea season seat second secreroty section sector selection selections seminar sense sentence servent service s- s- sex shade ship shit shelf shell shellter ship shoe shoplistise shopper shortage shower sight sights sign signature silence similation single site size skating sk- skill skin skirt slang slave sleep sleeping slip smell smoke smoking snak soil solution sound source south southeast southwest space speaker speaking speed spending spider sponser spoon sportsman sport stability stack stage stare standad star starter starting state statement station status state steam step s- stock stomache stomacheache stone stor story stratagy st- strike style subject submit sub- suberb suger - sunshild superviser support surface surgent sirname surprise survey survivle sweater switch switches - - s- system table tablet tape tacks 
 
 #### test paper 9
 taxi tea teacher teaching team j- term technology te- telephone telescope television temper temple text tex- galacy - - - - - thief - thinking third thought threat - ticket tide - - - time title toaster toilet tomato tone tool top topic total toching tour touring tourism tourist tower towel town track tractor trade tram tragedy trailer training trained travel traveller treatment trip tripe tribute tributes trinity tro- trouble tro- t- tuation tune - tutor type omp- understanding u- uniform union university usage v- vacation value poticul- variety vegtable vovlt vet video view village vinigar visor visitor vitiman vocation volunteer volunteers waste waiter walk waking war world warming washing worst waste weastland water wave w- welf weapon weather weight week weekday weekend weight welfare west westland w- will wi- willow wind wing word workforce working wound writing year yougar youth zero 
@@ -29,42 +29,46 @@ taxi tea teacher teaching team j- term technology te- telephone telescope televi
 
 ## Chapter 4
 #### test paper 1
-abnormal acdemic accessible acountable accuriate aditional adiquate advanced adviserble allergic alternitave amazing ambigulouse ambitious anlitical ancient angry aplied a- artificial artistic assending atomspheric atentive a- avalible aware awful a- board b- basic beautiful biological blind blond british broad berried calculating casure centrol chanllenging cheaper chearful childrens' classical clean cleanest clear clever coaltal comfortable common common-sence complete completed confident con- convient cooperative corapt costly cream critical cru- cultural c- current daly - dangurous dark departmental dependent detailed different direct disabled distant distant desmestic domanant easten economic educational effective efficient elementary empty enomous ensusiastic environmental enssional excited exciting existant expensive experienced experimental extensive extra fair fake 
+abnormal acdemic accessible acountable accuriate aditional adiquate advanced adviserble allergic alternitave amazing ambigulouse ambitious anlitical ancient angry aplied a- artificial artistic assending atomspheric atentive a- avalible aware awful a- board b- basic beautiful biological blind blond british broad berried calculating casure centrol chanllenging cheaper chearful childrens' classical clean cleanest clear clever coaltal comfortable common common-sense complete completed confident con- convient cooperative corapt costly cream critical cru- cultural c- current daly - dangurous dark departmental dependent detailed different direct disabled distant distant desmestic domanant easten economic educational effective efficient elementary empty enomous ensusiastic environmental enssional excited exciting existant expensive experienced experimental extensive extra fair fake 
 
 #### test paper 2
 famed familure famous fancy fasionable favorate final financial fine firm flexible foreign formal former free frequent foundamental further genaral genitic geographical global handy harmful h- healthy heavier heavy helpful h- higher h- historical least ill illigal immune important impossible inaccurate in- individual industrial inform- initial inspiren intact intelegent intensive interesting intermediate internal international inregullar i- islated key latest legal little-moon loil magic magical magnificant major marshall meture medical mental mid mig- militory misiroble mobile moderate morden musical natural negative neibouring nurverse noble noise non-active normal northen objective ocupational olympic optic optional orral organic overall overhead overseas porental p- perfect personal physical pleasent plitical pot 
 
 #### test papre 3
-popular positive possible protenial practical precious predictable present previous present previous p- private professional promising phy- physological public pure purest queense random rapid rare rore recicle re- reginal regular reinforst related relavent reliable remote resistent revirse rising roil roreal fact face f- s- scientific seasonal seasoned secondary second-hand self-founded self-su- seniro senssible serio serious seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof susen spacious spare special specialised speases specific s- stable steady s- s- stressful streching strong stronger subjective successful sufecient suitable super suprised sistmatic technical - troditional troublesome tipical u- uncomfortable uncon- undergroud unfair unhealthy unique united unreliable unsocial unuasul useful useless usual various vilent ver- visible visule warm washable wealthy weekly westen whole wide wise worthwhile worthy
+popular positive possible protenial practical precious predictable present previous present previous p- private professional promising phy- physological public pure purest queense random rapid rare rore recicle re- reginal regular reinforst related relavent reliable remote resistent revirse rising roil roreal fact face f- s- scientific seasonal seasoned secondary second-hand self-founded self-su- seniro senssible serio serious seven-screen several shared sharp short sick silent silver similar simple sleepy slim smart smelly social solar soundproof susen spacious spare special specialised speases specific s- stable steady s- s- stressful streching strong stronger subjective successful sufecient suitable super suprised sistmatic technical - troditional troublesome tipical u- uncomfortable uncon- undergroud unfair unhealthy unique united unreliable unsocial unuasul useful useless usual various violent ver- visible visule warm washable wealthy weekly westen whole wide wise worthwhile worthy
 
 #### test paper 4
 almost currently directly affectively afficiently arrigianly phi- professionally rapidly regularly - - 
 
 ## Chapter 5
 #### test paper 1
-a great vority of, a balant diet, - ,  a pair of glass, apeirod of time, - ,- , a serious person, a shot term , a bility , acdemic english, acdemic problem, acdemic system, acdemic teaching-, a - , a common - , a common-, a counts, action plan, a, admission card, admission office, adult student, advanced course, advanced degree, advanced english studies, a- , a head of time, a move lecture, ends, air pollution, air pump, air -, air conditioner, alarm system, alternative, ATM, amusment park , an educational film, analise data, ancient temple, a fee, answer questions, - , -, aperences, apple juice, application form, applied mathmatics, applied sience, -, artic ocean, atlatic ocean, avoid touching- , arm bach, arrived destination, art galary, art musiem, artical from -, artistic approch, asian studies, assessment -, assessment-, assisstent professor, -, -, at least, area , awords, - pollution, - women, australia dollars, -, breaks, both, bachlors degree, bad aside, bad management, bate earth, bank stavement, bank transfer, banking center, bar chart, bar code, -, -, -, basic course, basic rule, be allergic to sth, be out of temper, bedsheet, bed-, -, beginning course, belt, biological sourse, blank -, blank skirt, blank tea, blank trousers, blank -, blocks , blood flow, blood sample, bloom flowers, bloom-, -, boat trip, book in advance, book -, -, -, -, 
+a great variety of, a balant diet, - ,  a pair of glass, apeirod of time, - ,- , a serious person, a shot term , a bility , acdemic english, acdemic problem, acdemic system, acdemic teaching-, a - , a common - , a common-, a counts, action plan, a, admission card, admission office, adult student, advanced course, advanced degree, advanced english studies, a- , a head of time, a move lecture, ends, air pollution, air pump, air -, air conditioner, alarm system, alternative, ATM, amusement park , an educational film, analyse data, ancient temple, a fee, answer questions, - , -, aperences, apple juice, application form, applied mathmatics, applied science, -, artic ocean, atlatic ocean, avoid touching- , arm bach, arrived destination, art galary, art museum, article from -, artistic approach, asian studies, assessment -, assessment-, assistant professor, -, -, at least, area , awords, - pollution, - women, australia dollars, -, breaks, both, bachlors degree, bad aside, bad management, bate earth, bank statement, bank transfer, banking center, bar chart, bar code, -, -, -, basic course, basic rule, be allergic to sth, be out of temper, bedsheet, bed-, -, beginning course, belt, biological sourse, black -, black skirt, black tea, black trousers, black -, blocks , blood flow, blood sample, bloom flowers, bloom-, -, boat trip, book in advance, book -, -, -, -, 
 
 #### test paper 2
--, b-, b- , british couceil, british library, british musium, bro- , borden-, brother in law, buses, bus pass, bus routes, business card, business class, business culture, business essis, business-, business studies, business trip, -, caben kids, cabel car, -, -, campus-, candles, cannot miss the deadline, car model, car rental, car -, car index, card catalog, c-, -, c-, -, case study, case studies, choiese for facilities, -, CD player, CD rom, -, -, charges, -, -, -, center hall, center management, certer -, center avanue, cenner park , center station, -, - orgnizitiaon, -, check in, check out, checklist, chest infection, chemistry lab, church road, check book, check card, consatrate on, - performance, children's day, cheese production, city expansion, city conceil, city overhead view, -, class representitive, -, -, cleaning metarial, clare arguments, classmates, -, comfortable cloth, -, clock watch, cloth-, cloth book exam, -, cloth - TV, cofe shop, cofe break, cofe machine, collection tank, collections, collage-, common residences, common room, common sence, communication skills, communication statagies, communication techonology, -, -, company action, -, computer model, computer programmer, computer sound card, computer system, connecting flood, consert hall, consert room, classical music
+-, b-, b- , british council, british library, british museum, bro- , borden-, brother in law, buses, bus pass, bus routes, business card, business class, business culture, business essis, business-, business studies, business trip, -, caben kids, cable car, -, -, campus-, candles, cannot miss the deadline, car model, car rental, car -, car index, card catalog, c-, -, c-, -, case study, case studies, choiese for facilities, -, CD player, CD rom, -, -, charges, -, -, -, center hall, center management, certer -, center avanue, cenner park , center station, -, - orgnizitiaon, -, check in, check out, checklist, chest infection, chemistry lab, church road, check book, check card, consatrate on, - performance, children's day, cheese production, city expansion, city council, city overhead view, -, class representitive, -, -, cleaning material, clare arguments, classmates, -, comfortable cloth, -, clock watch, cloth-, close book exam, -, cloth - TV, cofe shop, cofe break, cofe machine, collection tank, collections, collage-, common residences, common room, common sense, communication skills, communication strategies, communication techonology, -, -, company action, -, computer model, computer programmer, computer sound card, computer system, connecting flood, concert hall, concert room, classical music
 
 #### test paper 3
-contact -, cooperation -,  with stress, -  loan, cost fective, cost of living, cost-, -, country music, -, -, director, cover the test, corss the roads, credic car, -, -, 
+contact -, cooperating -, - with stress, - loan, cost of ective, cost of living, cost- party, - mixture, country music, -fee, -, - director, cover the cost, corssed goods, credit card, -, crime vitness, -, cross passage, culture difference, culture shock, cerv- , currency form, current account, s route, costomer service, c and p- , damages, -, dark trousers, deadline, data analysis, data accessment, date of birth, date of expiry, -, day pupil, day school, day shift, death, decades, d-, decoration bloom, deliver speech, deliviry desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dining hall, dining room, diseases, distant deadline, distant learning, divorce rate, -, distribution of population, downward trend, do training courses, doctor's degree, domestic factors, domestic student, domestic vilence, door-key, door-to-door service, drugs, double lock, double room, double grow, drama theatre, -, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress- , disbutes, drinking machine, drinks and snacks, drink less coffee, driver's licence, driving license, directors, drop-off side, drop off, EI Nino, Eagle road, Eastern beach, eat harmful insects, - economic history, -, education -, education officer, education standard, education system, electronic-,  electrocit - , electricity bill, electricity fee, electronic dictionary, email attachment, email account, email address, emergency contact person , emergency telephone number, dail
 #### test paper 4
+emotion and mood, end of term, endangerous species, -, engineers, engineering room, -, enrollment fee, entrance fee, environment agency, environmental damage, environmental issues, environmental science,  study, environmentally-friendly, evening news, evening appointment, -, -, experimental -, -, expected-, express train, express way, extension number, extensive writing, exchange draft, extra charge, extra workload, exco film, eye doctor, eye contact, essay plan, ex-, face-to-face interview, failure rate, family medical history , familiar with, family abuse, family ticket, family name, family relationship, -, fancy ball, fancy dress party, -, farewell party, farming products, fare of unimployment, feel one's p-, female course study, -, -, - trip, field work, film festival, film studio, financial advice, financial affairs, financial budget, financial department, financial -, financial goals, financial market, financial -, financial policy, financial problems,financial shortage, financial source, fine arts, fine texture, fire alarm, fire blanket, fire draw, fire management, first floor, first name, first aid kit, first year student, -, fish cake, fishing boat, fishing industroy, fitness center,fitness club, fitness level, fitness training, fitness expenses, flexible working time, flight number, flowers' taste, flying craft, flying speed, food processing, food and oil, food -, focus on, football club, football match, for sale, forestry industry, formal clothes, four nights, fortnight, forth year student
 
 #### test paper 5
+three for hiting, free of charge, free tranportation, - juice, foot trace, functions and places, full-time, full name, fir trade, further education, - hall, - tool, generation of electricity, gas station, ge- , general english, general practise, general health, general idea, general method, general science, -trip, - locaiton, - value, give sb a sack, given name, give a discription, give speech, give conformation, get feedbacks, - , -, hospital, global listening, global warming, gold meddle, gold street, golf club, good eyesight, good shoes, good stearing, goodbye party, geveronment policy, geveronment founded, grasb key words, graduate school, graduation announcement, -, green parten, great favourites, ground floor, green waste, gray hunt bus, group discussion, gym membership, hense, high wind, -, half term, hard- animal, -, -, hand pump, hand ber-, have access to, harmful insects, harmful to human, have storng - and - , have an operation, have high - in geography, have - muscles, help desk, head master, head office, health care, health check, health club, heart attack, heart beats, heart disease, hear in-, horse-, horse riding, -, -, post family, high rack, highly trained staff, higher education, high building, high quality camera, honey moon, historical museum, history of school, historical map, horral film, hot-dog, hot meal, hot house effect
 
 #### test paper 6
+hotel crime, hum-, house insurance, house key, housing agency, human beings, human cosumption,human race, human resources, ice -, ice pack , ice skating, identities, identity card, illegal-, ivisible view, immune system, inadvances, inchemistory lab, incircle, incirculation, indian ocean, incoming -, independent day, industrial -, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of- , institutes, institutions, insects -, instructors, instruction of handbook, instant coffee, interpersonal skills, insurance companies, insurance company, intensive course, intensive study, -, intermediate course, internal clock, international club, international eveinging, international student card, internantional student, internet access, internet cafe, internet system, investgates, - land, isolated supports, job interview, jaws, joint membership, keepers, jump the cue, jump the line, k-, k-, k-, key approach, - re, key words, kick sb out of work , king size bed, -, knight, kitchen table, -, lamps, listening tape script, lab equipment, lack confidence, lack of confidence, landmark, large slide, large s- housing, lecture hall, lay the printing, last but not lease, last name, loyers, lay out of resume, learning shortages, learning styles, leisure -, leisure activities, level of -, lemon tree, letter of recomondation, library card, library resource, life science, -, -, life insurance, lights, link to, literary film, list of headings, list of objective
 
 #### test paper 7
+living cost, living expense, loan, local walking club, local history, local industory, local pet shop, local product, local resident, local school, local shop, local student, local tripe, loc- points, lock all windows, long term learn, lot of soil, lose temper, loud speaker, love story, low nutr-, low - noise, low income, magazines and journals, magical animals, machines and robots, marshal arts, maid servent, mails, mailing list, major in nothing, main course, main entrance, main hall, main kitchen, main library, make an oppointment, make plan, map of cave, manage time better, man made stamp, manu facilities, market research , market circle, market economy, marketing management, marketing research, marketing- , marketing seminar, marketing strategies, -, mind map, master's degree, master card, mid and ch-, mathmatic formula, muture students, media studies, media center, media room , medical science, medical center, medical history, booklist, membership consultant, membership of a club ,mental ability, mental education, microwave, midautam festival, midmorning snacks, mid range,mid simester, migration pattens, -, miles, military museum, - on the ground, millions of , mountains, miniral water, minimum qualification,  - , mobile phone, modern languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, - of education, mosquito net, mother-in-law, movie poster, movement of muscle, music equipment, music instrumetn, notice board, name -, native animals, negative effect, natural medicine, natural museum, - ,new technologies, nights, night shift, -, no charge, no nuts, non medicine-, non stop flight, not check identity, -, number of exposure, number of -, nursing care, nursing the -, -, nursery, nursery school, - course, self-surficient, off campus, office assistant, over fell, oil explosion, -, -, 
 
 #### test paper 8
+on campus, on foot, -, on small -, one way ticket, one way, online shopping, open admission, open shelts, open-book exam, optic examination, - course, optional expenses, oral defence, orange juice, ordenary-, - farming, -, organic, food, organic mateiral, - studies, original reason, uncirculation, out of temper, out on loan, out side activity, over the name , overall trend, over - pay and fine, over head projector, overhead view, overseas student, -, packages, package tour, packing list, pacific ocean, - pool, pages, - group relationship, -, pump tree-, paper jam, parents meeting-, - teaching, part-time job, part time, party wares, passport photo, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainner, PHD, -, phone bill, ph-, article, - office, physical - education  surroundings -, pie chart, pine tree, -, placement test, planet science, planet society, planning meeting, planting garden, plastic bags, plastic-, plus, - money, point of view, p- cards, poor-, - test-, population explosion, -, -, positive effect, possible causes of stress, - survey, power company, practical skills, -, precious stone, -, present-, previous data, previous ensurence company, -, sutdies, price list, principle, printed card, printed catalog, private bathroom, private property, private school, private trip, prive giving, prefessional learning, project work, project background, project outline, profits, psychological patients, psychological course, public transport, public - , public examination, facilities, health, interest, schoole, service, skills, quality of teaching, education, person-, -, property insurance, - handling, queen sweet, queen size bed, queen's park ,RA, railway-, railway station, railway tracks, worker, random selection
 
 #### test paper 9
+range of english level, rapid population growth, row material, rare lines, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading secion, - books, recall system, receive -, reception area, reception certer, reception desk, recreation -, recrute method, recycling material, red flag, red cagrro, red meat, reference book , skills, stacks, re- calls, -, regualar meetings, regualation, -, related to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, findings, methods, oppurtunities, results, source, resident sutdent, residential college, resistent from parents, resource management resource protection, resource sharing, resourse room, respect - environment, result from , result in, review of literature, review -, rice-, - restaurant, road len, robots, rock-, roman story, road's garden, ro house, round trip ticket, round trip, root map, road map, roil commition, robot blanket, robot tree, rules and -, one risks, running facilities, -, rural area, - of staff, rush hour, safety check, -, helmet, sales team, safety office, regulations, f- island, - clock, satellite TV station, -, school uniform, science fiction, science museum, scientific - research, -, -, sea -, sea watch, sea food restaurant, s-, seating capacty, second floor, second hand text book, secondary school, second year student, - life-, selection method, self-access lab, self defence, self service restaurant, senior advisor, senior manager senior staff, sense of achievement, sense of success, sensible exercise sentence, service manager, set money aside, shared bathroom, shared social area, share the sheep, sheep - , sheep sharing, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money , - note, side effects, - zoo, -park, similar experments, -, size of population, size of sample, silver cloth
 
 #### test paper 10
+-, sleeping pills, sleeping sickness, slight presetinsion, small skill, small - on -, smoke alarms, social activities, social -, social issues, matter effect, matters, problems, status, workers, soft drinks, soft toys, sound effect, solar system, solar power, -, spare time, spare parts, spare socks, space shuttle, special -, chemicals, male, office, party hands, rule, -, specilise cost museum, -, specise in rare animals area, -, spending plans, spiders, - notebook, sport articles, sprot suit, sport center, sprots hall, sports shoes, -, stack system, stacks, standard of education, standard -, stars, starter project, starting point, states, -, steam engine ship, steal end work, -, steal water, stock market, stomach and heart, stomach muscles training, -, storage space, store house and temples, stories, story conference, stress levels, stress management, stressful, streching, streching movements, strict control, strong cent, strong wind, student account, student banking, student debt, houstal, information desk, representitive, service, support service, union, studio apartment, study aids, circle, club, technique, styles, - nose, toyes, of peer, subject access- , subject access, submit the document, - details, support -, support service, sun's position, -, sun -, summary report, servey conducted, of reading, servival course, swimming -, in waterfall, pool, suit, TA, tablets, take notes, take blood pressure, take one's temperature, take regular exercise, take risks, taxi stand, - vocabulary, - institution, teaching club, teaching hours, teaching method, staff, -, teachers and fanculty, -, telephone servey, television drama, temple war, temples, tennis club, terrouse house, terr hit, t- education, text structor, text allowance, - department, the disabled, the old, the poll, the milky way
 
 #### test paper 11
-
-
-
-
+theme garden, theme of project, theme park, theoretical background, -, tiger shock,-, -, - method, - land, third floor, third year student, thinking parten, way of thinking, time table, time measurement, time priority, time management, title of essay, to some degree, to some extend, toilot facility, too much work, tomatoes, tones, top shelf , top ten, toching rocks, tour guide, tourism organization, tourist -, town hall, toy factory, traffic flow, traffic jam, lights, rules, safety, transportation card, travel agency, travel package, check, treatment method, - college, - diseases, tusion fee, - system, twin room, TV series, chat show, under pressure, undergo processing, under ground car park, railway, unhealthy diet, union bank, unit of measurement, university drive, facilities, guide, of w- gun, resource, unsocial hours, upward trend, unbern area, -, -, vary according to the type shape, vary one's diet, vegetable burger, video project, vidoe recording , signal, tape editor, visial aids, VIP class, virtual learning, visa, violent crime, vocanic -, warm bus, volumn chart, voting system, waiting list, walking boots, walking club, wait training, washable shoes, washing machine, - photo, waist handing, waist -, xray, waving blanket, water fee, water heater, water park, water resources, water skin, weakly return, welcome package, welcome party, welfare department, western europe, wheel chair, white meat, whole sale, wide reading, wide writing, -, widen one's view, - power, -, wind, window, wind design, withdraw cash, -, would be cut and - world -, work place, work systematically, -, reached boat, wild animal, use hostoal, your own- , yellow fever
