--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -1,43 +1,43 @@
 |第一遍|第二遍|第三遍|第四遍|第五遍|第六遍|第七遍|
 |----|----|----|----|----|----|----|
 |**chapter 3.1**|
-|accountant|||||||
-|accuracy|||||||
-|acid|
+|accountant 会计|||||||
+|accuracy 准确|||||||
+|acid 酸|
 |adventure|
 |advertisement|
 |agriculture|
-|alley|
+|alley 小巷|
 |allowance|
 |amount|
 |analysis|
 |analyst|
-|ankle|
-|Antarctica|
-|ape|
+|ankle 脚踝|
+|Antarctica 南极洲|
+|ape 猿|
 |appearance|
 |architect|
 |architectures|
-|aristocrat|
+|aristocrat 贵族|
 |article|
 |aspirin|
 |assignment|
-|atlas|
-|auditorium|
+|atlas 地图集|
+|auditorium 礼堂|
 |author|
 |authority|
 |award|
 |bachelor|
-|badge|
+|badge 奖章|
 |badminton|
 |baldness|
 |bands|
-|banquet|
+|banquet 宴会|
 |bases|
-|beard|
+|beard 胡子|
 |beats|
 |beauty|
-|bibliography|
+|bibliography 参考目录|
 |bicycle|
 |board|
 |bone|
@@ -46,27 +46,27 @@
 |breakfast|
 |brick|
 |bridge|
-|brochures|
-|bungalow|
+|brochures 宣传册|
+|bungalow 平房|
 |burger|
-|burglar|
+|burglar 窃贼|
 |bus|
 |**chapter 3.2**|
-|cabinet|
-|cafeteria|
+|cabinet 柜子|
+|cafeteria 自助餐厅|
 |Cambridge|
-|canteen|
-|capsule|
-|carbon
+|canteen 食堂|
+|capsule 胶囊|
+|carbon|
 |career|
-|carpet|
+|carpet 地毯|
 |castle|
 |category|
-|cathedral|
+|cathedral 大教堂|
 |cause|
 |cents|
 |century|
-|chancellor|
+|chancellor 大学校长|
 |channel|
 |character|
 |chemist's|
@@ -79,33 +79,33 @@
 |cola|
 |colleague|
 |comedy|
-|commuter|
-|companion|
+|commuter 通勤者|
+|companion 伴侣|
 |conferences|
 |condifence|
-|congestion|
+|congestion 拥堵|
 |conqueror|
-|consultant|
-|consumption|
-|contaminants|
+|consultant 顾问|
+|consumption 消费|
+|contaminants 污染物|
 |contamination|
-|continent|
-|controversy|
+|continent 大陆，洲|
+|controversy 争议|
 |convenience|
 |corperation|
-|corpse|
-|correspondence|
-|costume|
+|corpse 尸体|
+|correspondence 写信|
+|costume 戏服|
 |cough|
 |council|
 |country|
 |course|
-|craft|
-|creek|
-|crisis|
-|crocodile|
+|craft 手艺|
+|creek 小溪|
+|crisis 危机|
+|crocodile 鳄鱼|
 |crop|
-|cutlery|
+|cutlery 餐刀|
 |cycle|
 |cycling|
 |**chapter 3.3**|
