--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -112,55 +112,55 @@
 |debt|
 |decision|
 |decorations|
-|delight|
+|delight 高兴|
 |depth|
 |description|
 |desire|
 |dining|
-|dioxide|
+|dioxide 二氧化物|
 |discos|
 |disease|
-|disposal|
-|dispute|
+|disposal 处置|
+|dispute 争议|
 |distance|
 |divorce|
 |drama|
 |draw|
 |drawer|
 |due|
-|duration|
+|duration 持续时间|
 |eagle|
-|elbow|
+|elbow 肘|
 |emperor|
-|encyclopedia|
+|encyclopedia 百科全书|
 |engine|
-|epidemic|
-|ethic|
+|epidemic 流行病|
+|ethic 伦理|
 |excitement|
-|excursion|
+|excursion 游玩|
 |exercises|
 |exhibition|
-|expansion|
+|expansion 扩充|
 |explanation|
 |explosion|
-|exposition|
-|exposure|
+|exposition 博览会|
+|exposure 曝光|
 |**chapter 3.4**|
 |failure|
 |fashion|
-|feast|
+|feast 宴会|
 |feather|
 |feature|
 |festival|
-|feild|
+|field|
 |finger|
 |flour|
-|flourish|
+|flourish 炫耀|
 |flu|
 |forest|
 |forestry|
 |formula|
-|foyer|
+|foyer 门厅|
 |fruit|
 |fur|
 |furniture|
@@ -172,52 +172,52 @@
 |growth|
 |habit|
 |handling|
-|handout|
+|handout 讲义|
 |hat|
 |headache|
-|berb|
+|herb 草药|
 |heroes|
-|heroine|
+|heroine 女英雄|
 |historian|
 |housework|
 |housing|
 |**chapter 3.5**|
-|inability|
+|inability 无力|
 |injury|
 |insect|
-|insomnia|
-|investigator|
-|isolation|
-|jaw|
+|insomnia 失眠|
+|investigator 调查人|
+|isolation 隔离|
+|jaw 下颚|
 |jeans|
-|journal|
+|journal 学术期刊|
 |junction|
 |junior|
 |keeper|
-|kelp|
-|kiosk|
+|kelp 海藻|
+|kiosk 小卖部|
 |knowledge|
-|koala|
+|koala 考拉|
 |laser|
-|lava|
-|lecturer|
+|lava 火山岩|
+|lecturer 授课教师|
 |lengh|
 |lesson|
 |lift|
 |lion|
 |loss|
-|lounge|
+|lounge 休息大厅|
 |loyalty|
-|mane|
+|mane 鬃毛|
 |mat|
-|meterial|
+|material|
 |maturity|
 |medium|
 |migration|
-|mileage|
-|mineral|
-|monoply|
-|morality|
+|mileage 里程表|
+|mineral 矿物|
+|monopoly 垄断|
+|morality 道德|
 |mosquito|
 |**chapter 3.6**|
 |moustache|
