--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -220,74 +220,74 @@
 |morality 道德|
 |mosquito|
 |**chapter 3.6**|
-|moustache|
+|moustache 胡子|
 |mouth|
 |muscle|
 |museum|
-|naught|
-|nursery|
+|naught 零|
+|nursery 幼儿园|
 |nut|
 |nutrition|
-|occasion|
-|occupant|
-|oculist|
-|ointment|
+|occasion 场合|
+|occupant 占有者|
+|oculist 眼科医生|
+|ointment 药膏|
 |option|
 |ordinary|
 |Oxford|
 |paint|
 |painting|
 |pair|
-|pal|
+|pal 伙伴|
 |parcel|
-|pastime|
-|pedestrian|
-|pension|
-|peisioners|
-|perfume|
+|pastime 娱乐活动|
+|pedestrian 行人|
+|pension 养老金|
+|pensioners|
+|perfume 香水|
 |permit|
-|petroleum|
-|philosopher|
-|physician|
+|petroleum 石油|
+|philosopher 哲学家|
+|physician 内科医生(surgeon外科医生)|
 |physics|
-|pianist|
+|pianist 钢琴家|
 |player|
 |police|
-|poll|
+|poll 民意调查|
 |pollutant|
 |port|
-|particulars
+|particulars 细节|
 |**chapter 3.7**|
-|pottery|
-|precaution|
-|precision|
-|preposition|
-|prescription|
-|presentation|
-|preservation|
+|pottery 陶器|
+|precaution 预防|
+|precision 精确|
+|preposition 介词|
+|prescription 药方|
+|presentation 介绍|
+|preservation 保存|
 |privacy|
 |professor|
-|prone|
+|prone 倾向于|
 |property|
-|prospectus|
-|protein|
-|psychiatrist|
+|prospectus 招生简章|
+|protein 蛋白质|
+|psychiatrist 心理医生|
 |psychologist|
-|psychotherapy|
+|psychotherapy 心理疗法|
 |publication|
 |purpose|
 |quantity|
 |quarter|
-|radar|
-|fainfall|
-|recipe|
-|recruit|
+|radar 雷达|
+|rainfall|
+|recipe 处方|
+|recruit 招募|
 |recycling|
-|referee|
-|reference|
-|reflectance|
+|referee 裁判员|
+|reference 参考书|
+|reflectance 反射率|
 |relaxation|
-|relief|
+|relief 缓解|
 |religion|
 |repetition|
 |restaurant|
