--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -294,24 +294,24 @@
 |role|
 |**chapter 3.8**|
 |route|
-|safari|
+|safari 游猎|
 |sale|
 |salt|
 |sample|
-|sandal|
+|sandal 凉鞋|
 |satellite|
 |sauce|
-|scandal|
+|scandal 丑闻|
 |scandals|
 |scar|
 |scent|
 |schedule|
-|scheme|
-|scholar|
-|scholarship|
-|sculpture|
+|scheme 方案|
+|scholar 学者|
+|scholarship 奖学金|
+|sculpture 雕刻|
 |secretary|
-|sense|
+|sense 感觉|
 |servant|
 |sewage|
 |sewer|
@@ -320,7 +320,7 @@
 |shelter|
 |shoplifters|
 |side|
-|simulation|
+|simulation 模拟|
 |sketelon|
 |snack|
 |sponsor|
