--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -321,29 +321,29 @@
 |shoplifters|
 |side|
 |simulation 模拟|
-|sketelon|
+|sketelon 骨架|
 |snack|
-|sponsor|
+|sponsor 发起人|
 |spot|
 |steak|
-|sting|
+|sting 刺|
 |stomach|
 |stomachache|
 |store|
-|stategy|
+|srtategy|
 |strength|
-|subsidy|
-|suburb|
+|subsidy 津贴|
+|suburb 郊区|
 |sugar|
 |suit|
 |sunshield|
-|supervisor|
-|surgeon|
+|supervisor 导师|
+|surgeon 外科医生|
 |surname|
 |survival|
-|symptom|
-|syndicate|
-|syrup|
+|symptom 症状|
+|syndicate 财团|
+|syrup 糖浆|
 |tax|
 |**chapter 3.9**|
 |jargon|
