--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -248,7 +248,7 @@
 |permit|
 |petroleum 石油|
 |philosopher 哲学家|
-|physician 内科医生(surgeon外科医生)|
+|physician 内科医生|
 |physics|
 |pianist 钢琴家|
 |player|
@@ -346,44 +346,44 @@
 |syrup 糖浆|
 |tax|
 |**chapter 3.9**|
-|jargon|
+|jargon 黑话|
 |teeth|
-|texture|
-|galaxy|
-|theft|
+|texture 质地|
+|galaxy 星系|
+|theft 偷窃|
 |theory|
-|therapist|
-|therapy|
-|thesis|
+|therapist 治疗专家|
+|therapy 疗法|
+|thesis 毕业论文|
 |thieves|
-|thriller|
-|tides|
-|tile|
-|timber|
+|thriller 恐怖小说|
+|tides 潮汐|
+|tile 瓦片|
+|timber 木材|
 |touching|
 |trend|
-|tribe|
-|trolley|
+|tribe 部落|
+|trolley 手推车，有轨电车|
 |tube|
 |tunnels|
 |tuition|
-|tunes|
-|umpire|
-|utensil|
-|vacancy|
+|tunes 曲子|
+|umpire 裁判|
+|utensil 厨房器具|
+|vacancy 空缺|
 |particular|
 |vegetable|
-|velvet|
+|velvet 天鹅绒|
 |visa|
 |vitamin|
 |waist|
-|wasp|
+|wasp 黄蜂|
 |wasteland|
-|wax|
+|wax 蜡|
 |wealth|
-|weeds|
-|wetland|
-|whale|
+|weeds 杂草|
+|wetland 湿地|
+|whale 鲸鱼|
 |wheel|
 |width|
 |yoga|
