--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -389,54 +389,54 @@
 |yoga|
 |**chapter 4.1**|
 |academic|
-|accountable|
+|accountable 负有责任的|
 |accurate|
 |additional|
-|adequate|
-|advisable|
-|alternative|
-|ambiguous|
+|adequate 足够的|
+|advisable 明智的|
+|alternative 替代的|
+|ambiguous 模糊的|
 |analytical|
 |applied|
-|archaeological|
-|ascending|
+|archaeological 考古学的|
+|ascending 上升的|
 |atmospheric|
-|attentive|
+|attentive 周到的|
 |audio|
 |available|
 |auto|
-|bald|
-|barren|
-|buried|
-|sasual|
+|bald 秃头的|
+|barren 贫瘠的|
+|buried 埋藏的|
+|casual 偶然的|
 |central|
 |cheerful|
-|coastal|
-|commonsense|
-|conservative|
+|coastal 临海的|
+|commonsense 常识的|
+|conservative 保守的|
 |convenient|
-|corrupt|
-|crucial|
-|curly|
+|corrupt 腐败的|
+|crucial 关键的|
+|curly 卷发的|
 |daily|
-|dairy|
+|dairy 牛奶的|
 |dangerous|
 |distinct|
-|domestic|
-|dominant|
+|domestic 家庭的|
+|dominant 优势的|
 |eastern|
-|enormous|
-|enthusiastic|
-|essential|
-|existent|
+|enormous 巨大的|
+|enthusiastic 热情的|
+|essential 基本的|
+|existent 现存的|
 |**chapter 4.2**|
 |familiar|
 |fashionable|
 |favourite|
 |general|
-|genetic|
-|hazardous|
-|herbivorous|
+|genetic 基因的|
+|hazardous 冒险的|
+|herbivorous 食草的|
 |highly-trained|
 |illegal|
 |inadequate|
@@ -444,21 +444,21 @@
 |inspiring|
 |intelligent|
 |irregular|
-|irritable|
-|isolated|
+|irritable 易怒的|
+|isolated 隔离的|
 |little-known|
 |loyal|
-|magnifisent|
-|martial|
+|magnificent 华丽的|
+|martial 武术的|
 |mature|
-|migratory|
-|military|
-|miserable|
+|migratory 迁移的|
+|military 军事的|
+|miserable 悲伤痛苦的|
 |modern|
 |neighbouring|
 |nervous|
 |northern|
-|occupational|
+|occupational 职业的|
 |oral|
 |parental|
 |payable|
