--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -466,52 +466,51 @@
 |pop|
 |**chapter 4.3**|
 |printed|
-|psychiatric|
-|psychological|
+|psychiatric 精神病的|
+|psychological 心理学的|
 |Queen's|
-|raw|
+|raw 生的|
 |recycled|
-|redundant|
-|regional|
-|reinforced|
-|relevant|
-|resistant|
-|reverse|
-|royal|
-|rural|
-|sacked|
+|redundant 多余的|
+|regional 地区的|
+|reinforced 加强的|
+|relevant 有关的|
+|resistant 顽固的|
+|reverse 相反的|
+|royal 王室的|
+|rural 乡下的|
+|sacked 解雇的|
 |safe|
-|satisfactory|
-|scarce|
-|self-funded|
-|self-sufficient|
-|sensible|
-|serial|
+|satisfactory 令人满意的|
+|scarce 罕见的|
+|self-funded 自费的|
+|self-sufficient 自给自足的|
+|sensible 明智的|
+|serial 连续的|
 |southern|
-|species|
-|spiral|
-|stout|
-|strained|
+|spiral 螺旋形的|
+|stout 强壮的|
+|strained 因紧张而不自然的|
 |sufficient|
 |surprised|
 |systematic|
-|theoretical|
+|theoretical 理论的|
 |traditional|
 |typical|
-|unanimous|
-|unconvincing|
+|unanimous 一致通过的|
+|unconvincing 不可信的|
 |unusual|
 |violent|
-|virtual|
+|virtual 虚拟的|
 |visual|
 |western|
 |**chapter 4.4**|
-|effectively|
-|efficiently|
-|originally|
-|physically|
-|scarcely|
-|virtually|
+|effectively 有效地|
+|efficiently 高效地|
+|originally 原来地|
+|physically 身体地|
+|scarcely 不足地|
+|virtually 几乎|
 |**chapter 5.1**|
 |a balanced diet|
 |a couple of|
