--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -517,29 +517,31 @@
 |A plus|
 |a series of|
 |a sharp turn|
-|accommondation expense|
-|accommondation fee|
-|accommondation form|
+|accommodation expense|
+|accommodation fee 住宿费|
+|accommodation form|
 |accountants|
 |added panic|
-|agraian reform|
+|agrarian reform 土地改革|
 |aim of lecture|
 |aims|
-|air shuttle bus|
-|alternative energies|
+|air shuttle bus 机场大巴|
+|alternative energies 替代能源|
 |annual membership fee|
-|ant intelligence|
-|antibiotics and acid|
-|appearances|
-|architecture style|
-|Arctic Ocean|
-|Atlantic Ocean|
-|arm badge|
+|ant intelligence 蚂蚁智慧|
+|antibiotics and acid 抗生素|
+|appearances 外观|
+|architecture style 建筑风格|
+|Arctic Ocean 北冰洋|
+|Atlantic Ocean 大西洋|
+|Pacific Ocean 太平洋|
+|Indian Ocean 印度洋|
+|arm badge 臂章|
 |art gallery|
-|articles from journal|
-|artistic approach|
-|associate with|
-|assume the responsibilitiy|
+|articles from journal 期刊文章|
+|artistic approach 艺术的方法|
+|associate with 交往|
+|assume the responsibilitiy 假设责任|
 |area of improvement|
 |awards|
 |atmospheric pollution|
@@ -552,16 +554,16 @@
 |barbecue set|
 |barren land|
 |barren mine|
-|bed linen|
+|bed linen 床上用品|
 |be prone to|
 |black raincoat|
 |black velvet|
 |blue sweater|
-|boarding school|
+|boarding school 寄宿学校|
 |book reservation|
 |bones|
 |bowling alley|
-|botanical garden|
+|botanical garden 植物园|
 |**chapter 5.2**|
 |bulletin board|
 |breathtaking|
