--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -408,7 +408,7 @@
 |bald 秃头的|
 |barren 贫瘠的|
 |buried 埋藏的|
-|casual 偶然的|
+|casual 偶然的，休闲的|
 |central|
 |cheerful|
 |coastal 临海的|
@@ -565,28 +565,28 @@
 |bowling alley|
 |botanical garden 植物园|
 |**chapter 5.2**|
-|bulletin board|
-|breathtaking|
-|breed fish|
-|borden one's horizon|
-|borden one's view|
-|business ethics|
-|business faculty|
+|bulletin board 公告板|
+|breathtaking 惊险的|
+|breed fish 养殖鱼|
+|broaden one's horizon 开拓眼界|
+|broaden one's view|
+|business ethics 商业道德|
+|business faculty 商学院|
 |cages|
 |cabin keys|
-|circulation desk|
-|call slip|
+|circulation desk 还书处|
+|call slip 借书证|
 |campus crime|
 |car tyres|
 |comment card|
-|carbon dioxide|
+|carbon dioxide 二氧化碳|
 |carve|
 |carving wood|
-|cassette recorders|
-|casual clothes|
+|cassette recorders 录音机|
+|casual clothes 休闲装|
 |casual wear|
-|cater to|
-|catering facilities|
+|cater to 迎合|
+|catering facilities 餐饮设施|
 |catering staff|
 |center heating|
 |Center Avenue|
@@ -594,20 +594,20 @@
 |charitable organization|
 |charity hospital|
 |concentrate on|
-|circus performance|
+|circus performance 马戏团表演|
 |commuters|
 |class representative|
 |conquerors|
 |cleaning equipment|
-|coarse texture|
+|coarse texture 质地粗糙|
 |colleagues|
 |closed shelves|
 |closed reserve|
 |closed-circuit TV|
 |college close-up|
-|reference reports|
+|conference reports|
 |contact list|
-|complusory course|
+|compulsory course 必修课程|
 |connecting flight|
 |**chapter 5.3**|
 |contact lenses|
