--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -612,11 +612,11 @@
 |**chapter 5.3**|
 |contact lenses|
 |cooperating research elements|
-|coping with stress|
-|corporate loan|
-|cost effective|
-|costume party|
-|cough mixture|
+|coping with stress 缓解压力|
+|corporate loan 企业贷款|
+|cost effective 性价比高|
+|costume party 化妆舞会|
+|cough mixture 止咳药水|
 |course fee|
 |course and materials|
 |course director|
@@ -624,24 +624,24 @@
 |creeks|
 |crime awareness|
 |crime rate|
-|curve chart|
-|cycling route|
-|customs service|
-|cut and polished|
+|curve chart 曲线图|
+|cycling route 骑行路线|
+|customs service 海关服务|
+|cut and polished 切割和抛光|
 |dark clothes|
 |dateline|
-|date slip|
+|date slip 日期单|
 |debts|
-|decayed teeth|
-|decoration ballons|
-|distinguishing feature|
+|decayed teeth 蛀牙|
+|decoration balloons 装饰气球|
+|distinguishing feature 特色|
 |domestic factors|
 |domestic violence|
-|double grill|
+|double grill 双烤架|
 |Drama Festival|
-|dress rehearsal|
-|disputes|
-|EI Nino|
+|dress rehearsal 彩排|
+|disputes 争议|
+|EL Nino 厄尔尼诺现象|
 |economic growth|
 |economic class|
 |education exhibition|
