--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -309,7 +309,7 @@
 |scheme 方案|
 |scholar 学者|
 |scholarship 奖学金|
-|sculpture 雕刻|
+|sculpture 雕塑|
 |secretary|
 |sense 感觉|
 |servant|
@@ -580,7 +580,7 @@
 |car tyres|
 |comment card|
 |carbon dioxide 二氧化碳|
-|carve|
+|carve 雕刻|
 |carving wood|
 |cassette recorders 录音机|
 |casual clothes 休闲装|
@@ -651,24 +651,24 @@
 |**chapter 5.4**|
 |endangered species|
 |energy industry|
-|engrave|
+|engrave 刻|
 |exercise one's muscles|
 |exhibition of instruments|
 |experimental for construction|
 |expected duration|
 |ethical film|
-|extinct species|
-|fancy dress|
-|falcons|
+|extinct species 灭绝的物种|
+|fancy dress 化妆舞会的服装|
+|falcons 猎鹰|
 |fear of unemployment|
 |feel one's pulse|
 |female corpse study|
 |field method|
 |field system|
 |field trip|
-|financial exclutive|
+|financial exclutive 财务主管|
 |financial organization|
-|fire drill|
+|fire drill 消防演习|
 |fish tank|
 |fixed expenses|
 |food chain|
