--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -666,7 +666,7 @@
 |field method|
 |field system|
 |field trip|
-|financial exclutive 财务主管|
+|financial executive 财务主管|
 |financial organization|
 |fire drill 消防演习|
 |fish tank|
@@ -680,34 +680,34 @@
 |fur trade|
 |Garden Hall|
 |garden tools|
-|general election|
+|general election 全民选举|
 |geography trip|
 |geographic location|
 |geographical value|
-|give a presciption|
+|give a presciption 开药方|
 |guide book|
 |guided tour|
 |go to hospital|
 |gold medal|
-|good steering|
-|grasp keywords|
-|graduation announcements|
-|grain pattern of timber|
-|grain pattern|
-|greyhound bus|
-|hens|
+|good steering 方便操纵|
+|grasp keywords 抓住关键字|
+|graduation announcements 毕业典礼请柬|
+|grain pattern of timber 木材纹理|
+|grain pattern 纹理图案|
+|greyhound bus 灰狗巴士|
+|hens 母鸡|
 |half human|
-|hard-hoofed animals|
+|hard-hoofed animals 硬蹄动物|
 |hall of residence|
 |halls of residence|
-|hands broken|
+|hands broken 指针坏了|
 |have strong hearts and lungs|
 |have high rank in geography|
 |have strong financial muscles|
-|heat indicator|
+|heat indicator 热指示器|
 |horse hair|
 |herb tea|
-|herd of cattle|
+|herd of cattle 一群牛|
 |host family|
 |high rank|
 |high-rise buildings|
