--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -716,35 +716,35 @@
 |**chapter 5.6**|
 |hunt for|
 |human consumption|
-|ice curling|
+|ice curling 冰壶运动|
 |illegal profits|
 |incoming call|
 |Independence Day|
 |industrial material|
-|injection of vaccine|
-|insects haunting|
-|intensive course|
-|interlibrary service|
-|investigators|
-|irrigable land|
+|injection of vaccine 注射疫苗|
+|insects haunting 虫灾|
+|intensive course 强化课程|
+|interlibrary service 图书馆际服务|
+|investigators 调查者|
+|irrigable land 可灌溉土地|
 |isolated spot|
 |jump the queue|
-|killer whales|
+|killer whales 虎鲸|
 |Kungfu film|
-|kelp forest|
-|key to reception|
+|kelp forest 海藻森林|
+|key to reception 接待处钥匙|
 |King's suite|
 |knives/knife|
-|kitchen utensils|
-|large-scale housing|
+|kitchen utensils 厨具|
+|large-scale housing 大型住房|
 |laser printing|
 |lawyers|
 |learning strategies|
-|leisure ware|
+|leisure wear|
 |level of maturity|
 |letter of recommendation|
 |life cycle|
-|life expectancy|
+|life expectancy 预期寿命|
 |**chapter 5.7**|
 |local tribes|
 |lookout points|
