--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -747,42 +747,41 @@
 |life expectancy 预期寿命|
 |**chapter 5.7**|
 |local tribes|
-|lookout points|
+|lookout points 观景点|
 |loss of soil|
 |low nutrition|
-|low-frequency noise|
+|low-frequency noise 低频噪音|
 |magazines and journals|
-|martial arts|
-|manmade dam|
+|martial arts 武术|
+|manmade dam 人造大坝|
 |manual facilities|
 |market cycle|
 |marketing techniques|
-|mass media|
+|mass media 大众媒体|
 |meat and cheese|
-|mathmatic formula|
+|mathematic formula|
 |mature students|
-|microwave oven|
+|microwave oven 微波炉|
 |mid-autumn festival|
 |mid-semester|
-|migration patterns|
+|migration patterns 迁徙路线|
 |mileage ticket|
-|mill the grain on the ground|
-|mineral water|
+|mill the grain on the ground 磨|
+|mineral water 矿泉水|
 |mining industry|
 |monopoly of education|
 |name badge|
 |natural fiber|
 |no allergy|
 |non-medicine item|
-|not for circulation|
-|number of occupants|
+|not for circulation 不外借|
+|number of occupants 占用人数|
 |Nursing Deploma|
-|occupational factors|
+|occupational factors 职业因素|
 |obligatory course|
-|self-sufficient|
 |office assistant|
 |overfill|
-|olive oil|
+|olive oil 橄榄油|
 |OHPEN|
 |**chapter 5.8**|
 |on sale|
