--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -789,16 +789,16 @@
 |open shelves|
 |optional course|
 |ordinary farmers|
-|organic fiber|
-|Oriental studies|
-|out circulation|
+|organic fiber 有机纤维|
+|oriental studies 东方研究|
+|out circulation 已借走|
 |overall aim of the health club|
-|overdue and pay a fine|
-|hitchhike|
-|paddling pool|
-|pal group relationship|
+|overdue and pay a fine 过期罚款|
+|hitchhike 搭便车|
+|paddling pool 嬉水池|
+|pal group relationship 伙伴关系|
 |palaces|
-|palm tree|
+|palm tree 棕榈树|
 |parent's meeting's aim|
 |parental teaching|
 |party wears|
@@ -809,22 +809,22 @@
 |photocopy of article|
 |photocopy office|
 |physical therapy|
-|pink slip|
+|pink slip 解雇通知书|
 |plastic collection|
 |pocket money|
 |polish cars|
 |poor area|
-|pop test|
+|pop test 抽考|
 |population growth|
 |population of crocodiles|
-|postal servey|
-|precautions|
-|presentation skills|
+|postal survey 邮寄调查|
+|precautions 预防|
+|presentation skills 介绍|
 |President's suite|
 |public awareness|
-|quality of personnel|
-|quarry tiles|
-|question handling|
+|quality of personnel 人员素质|
+|quarry tiles 采石瓦|
+|question handling 问题处理|
 |Queen's suite|
 |railway rail|
 |**chapter 5.9**|
