--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -828,23 +828,23 @@
 |Queen's suite|
 |railway rail|
 |**chapter 5.9**|
-|raw material|
-|reading session|
+|raw material 原材料|
+|reading session 阅读课|
 |recall library books|
 |receive prize|
-|recreation therapy|
-|recruiting method|
+|recreation therapy 娱乐疗法|
+|recruiting method 招聘方法|
 |red kangaroo|
-|refresher course|
-|registered mail|
+|refresher course 进修|
+|registered mail 挂号信|
 |reinforced by wood and steel|
 |research opportunities|
-|resistence from parents|
-|repect the local environment|
+|resistance from parents 来自家长的阻力|
+|respect the local environment|
 |result from|
-|review of literature|
-|review promptly|
-|rice cultivation|
+|review of literature 复习文献|
+|review promptly 及时复习|
+|rice cultivation 水稻养殖|
 |Riverside Restaurant|
 |Rose Lane|
 |rock salt|
@@ -852,30 +852,30 @@
 |Rose Garden|
 |row house|
 |route map|
-|royal commission|
-|rubber blanket|
+|royal commission 皇家委员会|
+|rubber blanket 橡胶|
 |rubber tree|
 |rules and regulations|
-|run risks|
-|running tunnel|
+|run risks 冒险|
+|running tunnel 行车隧道|
 |role of staff|
 |Silent Island|
-|sandglass clock|
+|sandglass clock 沙漏|
 |School of Arts and Sciences|
 |scientific approach|
 |scores|
-|sea otter|
-|sea urchin|
+|sea otter 水獭|
+|sea urchin 海胆|
 |seat belt|
 |seating capacity|
-|sedentary lifestyle|
-|sensible exercise|
-|shear the sheep|
+|sedentary lifestyle 久坐的生活方式|
+|sensible exercise 合适的运动|
+|shear the sheep 剪羊毛|
 |sheep and cattle|
 |sheep shearing|
 |shop assistant|
 |sick note|
-|side effects|
+|side effects 副作用|
 |safari zoo|
 |safari park|
 |similar experiments|
