--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -927,43 +927,43 @@
 |the poor|
 |the Milky Way 银河|
 |**chapter 5.11**|
-|theoretical framework|
-|tiger shark|
+|theoretical framework 理论架构|
+|tiger shark 虎鲨|
 |theory chapters|
 |theory of application|
 |therapy method|
-|tilled land|
+|tilled land 耕地|
 |thinking pattern|
 |to some extend|
 |toilet facility|
 |tourist brochures|
-|traveller's check|
-|Trinity College|
-|tropical diseases|
+|traveller's check 旅行支票|
+|Trinity College 三一学院|
+|tropical diseases 热带病|
 |tuition fee|
-|tutorial system|
-|urban area|
-|vacuum cleaner|
+|tutorial system 小组讨论系统|
+|urban area 市区|
+|vacuum cleaner 吸尘器|
 |vacuum the stairs|
 |visual aids|
 |violent crime|
-|volcanic dust|
-|volume chart|
+|volcanic dust 火山灰|
+|volume chart 体积图|
 |weight training|
 |wedding photos|
-|waste handling|
-|waste deposal|
-|weaving blanket|
+|waste handling 垃圾处理|
+|waste disposal|
+|weaving blanket 编织|
 |water skiing|
 |widen one's horizon|
 |wind power|
-|wind tunnels|
-|window dressing|
-|wing design|
+|wind tunnels 风洞|
+|window dressing 窗户装饰|
+|wing design 机翼设计|
 |woman author|
-|wood should be cut and seasoned|
-|work objective|
-|World Expo|
-|wretched boat|
+|wood should be cut and seasoned 风干|
+|work objective 工作目标|
+|World Expo 世博会|
+|wretched boat 废弃的船|
 |youth hostel|
-|your own embassy|
+|your own embassy 本国大使馆|
